native/autogest.h

/* ==================================================================== *
 *  AutoGest — Contrato FFI (header)
 *  Declara structs, enums, constantes e as 21 funcoes do nucleo em C.
 *  Implementacoes ficam em: dados.c, validacao.c, calculos.c, alertas.c
 *
 *  Convencoes:
 *   - Datas: int64_t (inteiro). O Dart envia/recebe como numero.
 *   - Erros: int com valores do enum CodigoErro (0 = sucesso, <0 = erro).
 *   - Strings: recebidas como const char*, copiadas com strncpy.
 *   - Listas dinamicas: alocadas com malloc; liberadas pelo chamador.
 *   - Campos dormentes (km_ultima, intervalo_km, criterio): existem na
 *     struct mas nao geram comportamento na Fase 1.
 * ==================================================================== */

/* -------------------------------------------------------------------- *
 *  CONSTANTES
 * -------------------------------------------------------------------- */
#define MAX_NOME             50
#define MAX_PLACA             9
#define MAX_MARCA            30
#define MAX_MODELO           30
#define MAX_COMBUSTIVEL      20
#define MAX_DESCRICAO       100
#define JANELA_AVISO_PADRAO  30   /* dias de antecedencia do alerta "PROXIMO" */
/* -------------------------------------------------------------------- *
 *  ENUMS
 * -------------------------------------------------------------------- */
typedef enum {
    TROCA_OLEO,
    FILTRO_AR,
    FILTRO_COMBUSTIVEL,
    FILTRO_CABINE,
    PNEUS,
    CORREIA_DENTADA,
    ALINHAMENTO,
    BALANCEAMENTO,
    PASTILHA_FREIO,
    OUTROS,
    TOTAL_TIPOS_MANUTENCAO      /* sentinela — vale como contagem */
} TipoManutencao;
#define CATEGORIA_COMBUSTIVEL 0
#define TOTAL_CATEGORIAS_GASTO (TOTAL_TIPOS_MANUTENCAO + 1)
typedef enum {
    EM_DIA,
    PROXIMO,
    VENCIDO
} StatusAlerta;
typedef enum {
    POR_TEMPO,
    POR_KM,
    POR_AMBOS
} CriterioAlerta;
typedef enum {
    SUCESSO                 =  0,
    ERRO_KM_DECRESCENTE     = -1,
    ERRO_VALOR_NEGATIVO     = -2,
    ERRO_LITROS_NEGATIVO    = -3,
    ERRO_DATA_INVALIDA      = -4,
    ERRO_INTERVALO_INVALIDO = -5,
    ERRO_INDICE_INVALIDO    = -6,
    ERRO_MEMORIA            = -7,
    ERRO_CAMPO_VAZIO        = -8
} CodigoErro;
/* -------------------------------------------------------------------- *
 *  API de persistência (Banco) 
 *  Feito por: Herculano [19/06 - 01:33] - (Deixando claro aqui pq a gente n alinhou como seriam documentadas alterações kkkkk)
 * -------------------------------------------------------------------- */
/*
typedef struct BancoAutogest BancoAutogest;

BancoAutogest *banco_abrir(const char *caminho);

int banco_criar_tabelas(BancoAutogest *banco);
void banco_fechar(BancoAutogest *banco);

int banco_inserir_veiculo(
    BancoAutogest *banco,
    const Veiculo *veiculo
);

int banco_inserir_abastecimento(
    BancoAutogest *banco,
    const Abastecimento *abastecimento
);

int banco_inserir_manutencao(
    BancoAutogest *banco,
    const Manutencao *manutencao
);

Abastecimento *banco_listar_abastecimentos(
    BancoAutogest *banco,
    int *quantidade
);

Manutencao *banco_listar_manutencoes(
    BancoAutogest *banco,
    int *quantidade
);

void banco_liberar_abastecimentos(Abastecimento *lista);
void banco_liberar_manutencoes(Manutencao *lista);

const char *banco_ultimo_erro(BancoAutogest *banco);
*/

/* -------------------------------------------------------------------- *
 *  STRUCTS
 * -------------------------------------------------------------------- */
typedef struct {
    char nome[MAX_NOME];
    char placa[MAX_PLACA];
    char marca[MAX_MARCA];
    char modelo[MAX_MODELO];
    int  ano;
} Veiculo;
typedef struct {
    int    id;
    int64_t data;
    double litros;
    double valor_total;
    double km;
    char   combustivel[MAX_COMBUSTIVEL];
} Abastecimento;
typedef struct {
    int            id;
    TipoManutencao tipo;
    char           descricao[MAX_DESCRICAO];
    int64_t          data_realizada;
    double         custo;
    double         km_ultima;       /* dormente — preenchido pelo km atual */
    double         intervalo_km;    /* dormente — reservado para a Fase 2  */
    int            intervalo_dias;
    CriterioAlerta criterio;        /* Fase 1: sempre POR_TEMPO            */
} Manutencao;
typedef struct {
    int            id_manutencao;
    TipoManutencao tipo;
    StatusAlerta   status;
    int            dias_restantes;
    int64_t         data_proxima;
} Alerta;
typedef struct {
    double gasto_por_mes[12];                            /* indice 0 = janeiro      */
    double gasto_por_categoria[TOTAL_TIPOS_MANUTENCAO];  /* indice = TipoManutencao */
    double total_abastecimentos;
    double total_manutencoes;
    double total_geral;
    double gasto_por_mes_categoria[12][TOTAL_CATEGORIAS_GASTO];
} ResumoGastos;
/* ==================================================================== *
 *  GRUPO 4 — MOTOR DE ALERTAS   (src/alertas.c)
 *  gerar_lista_alertas aloca com malloc; o chamador libera com
 *  liberar_lista_alertas (seguro chamar com NULL).
 * ==================================================================== */
int          calcular_dias_restantes(int64_t data_realizada, int intervalo_dias,
                                     int64_t hoje);
StatusAlerta classificar_alerta(int dias_restantes, int janela_aviso);
Alerta*      gerar_lista_alertas(Manutencao* manutencoes, int total_manut,
                                 int64_t hoje, int janela_aviso,
                                 int* total_alertas);
void         liberar_lista_alertas(Alerta* lista);