lib/src/ffi/autogest_bindings.dart


  late final _calcular_dias_restantesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Int, ffi.Int64)>
      >('calcular_dias_restantes');
  late final _calcular_dias_restantes = _calcular_dias_restantesPtr
      .asFunction<int Function(int, int, int)>();

  StatusAlerta classificar_alerta(int dias_restantes, int janela_aviso) {
    return StatusAlerta.fromValue(
      _classificar_alerta(dias_restantes, janela_aviso),
    );
  }

  late final _classificar_alertaPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Int, ffi.Int)>>(
        'classificar_alerta',
      );
  late final _classificar_alerta = _classificar_alertaPtr
      .asFunction<int Function(int, int)>();

  ffi.Pointer<Alerta> gerar_lista_alertas(
    ffi.Pointer<Manutencao> manutencoes,
    int total_manut,
    int hoje,
    int janela_aviso,
    ffi.Pointer<ffi.Int> total_alertas,
  ) {
    return _gerar_lista_alertas(
      manutencoes,
      total_manut,
      hoje,
      janela_aviso,
      total_alertas,
    );
  }

  late final _gerar_lista_alertasPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<Alerta> Function(
            ffi.Pointer<Manutencao>,
            ffi.Int,
            ffi.Int64,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('gerar_lista_alertas');
  late final _gerar_lista_alertas = _gerar_lista_alertasPtr
      .asFunction<
        ffi.Pointer<Alerta> Function(
          ffi.Pointer<Manutencao>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  void liberar_lista_alertas(ffi.Pointer<Alerta> lista) {
    return _liberar_lista_alertas(lista);
  }

  late final _liberar_lista_alertasPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Alerta>)>>(
        'liberar_lista_alertas',
      );
  late final _liberar_lista_alertas = _liberar_lista_alertasPtr
      .asFunction<void Function(ffi.Pointer<Alerta>)>();
}

/// -------------------------------------------------------------------- *
/// ENUMS
/// --------------------------------------------------------------------
enum TipoManutencao {
  TROCA_OLEO(0),
  FILTRO_AR(1),
  FILTRO_COMBUSTIVEL(2),
  FILTRO_CABINE(3),
  PNEUS(4),
  CORREIA_DENTADA(5),
  ALINHAMENTO(6),
  BALANCEAMENTO(7),
  PASTILHA_FREIO(8),
  OUTROS(9),

  /// sentinela — vale como contagem
  TOTAL_TIPOS_MANUTENCAO(10);

  final int value;
  const TipoManutencao(this.value);

  static TipoManutencao fromValue(int value) => switch (value) {
    0 => TROCA_OLEO,
    1 => FILTRO_AR,
    2 => FILTRO_COMBUSTIVEL,
    3 => FILTRO_CABINE,
    4 => PNEUS,
    5 => CORREIA_DENTADA,
    6 => ALINHAMENTO,
    7 => BALANCEAMENTO,
    8 => PASTILHA_FREIO,
    9 => OUTROS,
    10 => TOTAL_TIPOS_MANUTENCAO,
    _ => throw ArgumentError("Unknown value for TipoManutencao: $value"),
  };
}

enum StatusAlerta {
  EM_DIA(0),
  PROXIMO(1),
  VENCIDO(2);

  final int value;
  const StatusAlerta(this.value);

  static StatusAlerta fromValue(int value) => switch (value) {
    0 => EM_DIA,
    1 => PROXIMO,
    2 => VENCIDO,
    _ => throw ArgumentError("Unknown value for StatusAlerta: $value"),
  };
}

enum CriterioAlerta {
  POR_TEMPO(0),
  POR_KM(1),
  POR_AMBOS(2);

  final int value;
  const CriterioAlerta(this.value);

  static CriterioAlerta fromValue(int value) => switch (value) {
    0 => POR_TEMPO,
    1 => POR_KM,
    2 => POR_AMBOS,
    _ => throw ArgumentError("Unknown value for CriterioAlerta: $value"),
  };
}

enum CodigoErro {
  SUCESSO(0),
  ERRO_KM_DECRESCENTE(-1),
  ERRO_VALOR_NEGATIVO(-2),
  ERRO_LITROS_NEGATIVO(-3),
  ERRO_DATA_INVALIDA(-4),
  ERRO_INTERVALO_INVALIDO(-5),
  ERRO_INDICE_INVALIDO(-6),
  ERRO_MEMORIA(-7),
  ERRO_CAMPO_VAZIO(-8);

  final int value;
  const CodigoErro(this.value);

  static CodigoErro fromValue(int value) => switch (value) {
    0 => SUCESSO,
    -1 => ERRO_KM_DECRESCENTE,
    -2 => ERRO_VALOR_NEGATIVO,
    -3 => ERRO_LITROS_NEGATIVO,
    -4 => ERRO_DATA_INVALIDA,
    -5 => ERRO_INTERVALO_INVALIDO,
    -6 => ERRO_INDICE_INVALIDO,
    -7 => ERRO_MEMORIA,
    -8 => ERRO_CAMPO_VAZIO,
    _ => throw ArgumentError("Unknown value for CodigoErro: $value"),
  };
}

/// -------------------------------------------------------------------- *
/// STRUCTS
/// --------------------------------------------------------------------
final class Veiculo extends ffi.Struct {
  @ffi.Array.multi([50])
  external ffi.Array<ffi.Char> nome;

  @ffi.Array.multi([9])
  external ffi.Array<ffi.Char> placa;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Char> marca;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Char> modelo;

  @ffi.Int()
  external int ano;
}

final class Abastecimento extends ffi.Struct {
  @ffi.Int()
  external int id;

  @ffi.Int64()
  external int data;

  @ffi.Double()
  external double litros;

  @ffi.Double()
  external double valor_total;

  @ffi.Double()
  external double km;

  @ffi.Array.multi([20])
  external ffi.Array<ffi.Char> combustivel;
}

final class Manutencao extends ffi.Struct {
  @ffi.Int()
  external int id;

  @ffi.UnsignedInt()
  external int tipoAsInt;

  TipoManutencao get tipo => TipoManutencao.fromValue(tipoAsInt);

  @ffi.Array.multi([100])
  external ffi.Array<ffi.Char> descricao;

  @ffi.Int64()
  external int data_realizada;

  @ffi.Double()
  external double custo;

  /// dormente — preenchido pelo km atual
  @ffi.Double()
  external double km_ultima;

  /// dormente — reservado para a Fase 2
  @ffi.Double()
  external double intervalo_km;

  @ffi.Int()
  external int intervalo_dias;

  /// Fase 1: sempre POR_TEMPO
  @ffi.UnsignedInt()
  external int criterioAsInt;

  CriterioAlerta get criterio => CriterioAlerta.fromValue(criterioAsInt);
}

final class Alerta extends ffi.Struct {
  @ffi.Int()
  external int id_manutencao;

  @ffi.UnsignedInt()
  external int tipoAsInt;

  TipoManutencao get tipo => TipoManutencao.fromValue(tipoAsInt);

  @ffi.UnsignedInt()
  external int statusAsInt;

  StatusAlerta get status => StatusAlerta.fromValue(statusAsInt);

  @ffi.Int()
  external int dias_restantes;

  @ffi.Int64()
  external int data_proxima;
}

final class ResumoGastos extends ffi.Struct {
  /// indice 0 = janeiro
  @ffi.Array.multi([12])
  external ffi.Array<ffi.Double> gasto_por_mes;

  /// indice = TipoManutencao
  @ffi.Array.multi([10])
  external ffi.Array<ffi.Double> gasto_por_categoria;

  @ffi.Double()
  external double total_abastecimentos;

  @ffi.Double()
  external double total_manutencoes;

  @ffi.Double()
  external double total_geral;

  @ffi.Array.multi([12, 11])
  external ffi.Array<ffi.Array<ffi.Double>> gasto_por_mes_categoria;
}

const int INT64_MAX = 9223372036854775807;

const int INT64_MIN = -9223372036854775808;

const int UINT64_MAX = -1;

const int __INT_LEAST64_MIN = -9223372036854775808;

const int __INT_LEAST64_MAX = 9223372036854775807;

const int __UINT_LEAST64_MAX = -1;

const int __INT_LEAST32_MIN = -2147483648;

const int __INT_LEAST32_MAX = 2147483647;

const int __UINT_LEAST32_MAX = 4294967295;

const int __INT_LEAST16_MIN = -32768;

const int __INT_LEAST16_MAX = 32767;

const int __UINT_LEAST16_MAX = 65535;

const int __INT_LEAST8_MIN = -128;

const int __INT_LEAST8_MAX = 127;

const int __UINT_LEAST8_MAX = 255;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST64_MAX = -1;

const int INT32_MAX = 2147483647;

const int INT32_MIN = -2147483648;

const int UINT32_MAX = 4294967295;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST32_MAX = 2147483647;

const int UINT_LEAST32_MAX = 4294967295;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST32_MAX = 2147483647;

const int UINT_FAST32_MAX = 4294967295;

const int INT16_MAX = 32767;

const int INT16_MIN = -32768;

const int UINT16_MAX = 65535;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST16_MAX = 32767;

const int UINT_LEAST16_MAX = 65535;

const int INT_FAST16_MIN = -32768;

const int INT_FAST16_MAX = 32767;

const int UINT_FAST16_MAX = 65535;

const int INT8_MAX = 127;

const int INT8_MIN = -128;

const int UINT8_MAX = 255;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST8_MAX = 127;

const int UINT_LEAST8_MAX = 255;

const int INT_FAST8_MIN = -128;

const int INT_FAST8_MAX = 127;

const int UINT_FAST8_MAX = 255;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int WINT_MIN = 0;

const int WINT_MAX = 65535;

const int WCHAR_MAX = 65535;

const int WCHAR_MIN = 0;

const int MAX_NOME = 50;

const int MAX_PLACA = 9;

const int MAX_MARCA = 30;

const int MAX_MODELO = 30;

const int MAX_COMBUSTIVEL = 20;

const int MAX_DESCRICAO = 100;

const int JANELA_AVISO_PADRAO = 30;

const int CATEGORIA_COMBUSTIVEL = 0;

const int TOTAL_CATEGORIAS_GASTO = 11;
